DeletarContatos.Api/k8s/producer-deletar-contatos-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deletar-contatos-deployment
  labels:
    app: producer-deletar-contatos
    tier: backend
    environment: production
  annotations:
    description: "Microsserviço responsável por criar contatos"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: producer-deletar-contatos
  template:
    metadata:
      labels:
        app: producer-deletar-contatos
        tier: backend
        environment: production
      annotations:
        description: "Pod do microsserviço producer-deletar-contatos"
    spec:
      containers:
        - name: producer-deletar-contatos
          image: containerfiap.azurecr.io/producer-deletar-contatos:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: producer-deletar-contatos-volume
              mountPath: /app/logs/producer/producer-deletar-contatos
          # readinessProbe:
          #   httpGet:
          #     path: /deletar/contato/health
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   failureThreshold: 3
          # livenessProbe:
          #   httpGet:
          #     path: /deletar/contato/health
          #     port: 80
          #   initialDelaySeconds: 30
          #   periodSeconds: 20
          #   failureThreshold: 3
      imagePullSecrets:
        - name: acr-auth
      volumes:
        - name: producer-deletar-contatos-volume
          persistentVolumeClaim:
            claimName: producer-deletar-contatos-persistent-volume-claim
