DeletarContatos.Api/k8s/producer-deletar-contatos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: producer-deletar-contatos-service
  labels:
    app: producer-deletar-contatos
    tier: backend
    environment: production
  annotations:
    description: "Service para expor o microsserviço producer-deletar-contatos"
spec:
  type: LoadBalancer
  selector:
    app: producer-deletar-contatos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
